@startuml

title __PasswordManager's Class Diagram__\n

  namespace model {
    class model.DBConnect {
    }
  }


  namespace model {
    class model.Story {
    }
  }

  namespace sample {
    class sample.Controller {
    }
  }


  namespace sample {
    class sample.Main {
    }
  }


  model.Story -right-|> model.DBConnect
  model.DBConnect -up-|> sample.Controller
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml